// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/ConnectedHeader renders the ConnectedHeader component 1`] = `
Object {
  "children": Array [
    <ForwardRef(InternalButton)
      block={false}
      className="bg-transparent border-0"
      ghost={false}
      htmlType="button"
      icon={<ForwardRef(SearchOutlined) />}
      loading={false}
      shape="circle"
      type="primary"
    />,
    <ForwardRef(InternalButton)
      block={false}
      className="bg-transparent border-0"
      ghost={false}
      htmlType="button"
      icon={<ForwardRef(QuestionCircleOutlined) />}
      loading={false}
      shape="circle"
      type="primary"
    />,
    <ForwardRef(InternalButton)
      block={false}
      className="bg-transparent border-0"
      ghost={false}
      htmlType="button"
      icon={<ForwardRef(BellOutlined) />}
      loading={false}
      shape="circle"
      type="primary"
    />,
    <ForwardRef(InternalButton)
      block={false}
      className="bg-transparent border-0"
      ghost={false}
      htmlType="button"
      icon={<ForwardRef(BellOutlined) />}
      loading={false}
      type="primary"
    >
      <ForwardRef
        to="/login"
      >
        Login
      </ForwardRef>
    </ForwardRef(InternalButton)>,
    <ForwardRef(InternalButton)
      block={false}
      className="bg-transparent border-0"
      ghost={false}
      htmlType="button"
      icon={<ForwardRef(GlobalOutlined) />}
      loading={false}
      shape="circle"
      type="primary"
    />,
  ],
  "className": "txt-white align-items-center justify-content-end px-1",
}
`;

exports[`components/ConnectedHeader renders the ConnectedHeader when logged in 1`] = `
Object {
  "children": Array [
    <ForwardRef(InternalButton)
      block={false}
      className="bg-transparent border-0"
      ghost={false}
      htmlType="button"
      icon={<ForwardRef(SearchOutlined) />}
      loading={false}
      shape="circle"
      type="primary"
    />,
    <ForwardRef(InternalButton)
      block={false}
      className="bg-transparent border-0"
      ghost={false}
      htmlType="button"
      icon={<ForwardRef(QuestionCircleOutlined) />}
      loading={false}
      shape="circle"
      type="primary"
    />,
    <ForwardRef(InternalButton)
      block={false}
      className="bg-transparent border-0"
      ghost={false}
      htmlType="button"
      icon={<ForwardRef(BellOutlined) />}
      loading={false}
      shape="circle"
      type="primary"
    />,
    <Dropdown
      mouseEnterDelay={0.15}
      mouseLeaveDelay={0.1}
      overlay={
        <Menu>
          <MenuItem>
            <ForwardRef
              to="/logout"
            >
              Logout
            </ForwardRef>
          </MenuItem>
          <MenuItem>
            <ForwardRef
              to="/user/edit/cab07278-c77b-4bc7-b154-bcbf01b7d35b"
            >
              Manage account
            </ForwardRef>
          </MenuItem>
        </Menu>
      }
      placement="bottomRight"
    >
      <ForwardRef(InternalButton)
        block={false}
        className="h-auto d-flex align-items-center bg-transparent border-0"
        ghost={false}
        htmlType="button"
        icon={
          <ForwardRef(InternalAvatar)
            className="mr-1 bg-white"
            shape="circle"
            size="default"
          >
            RobertBaratheon
          </ForwardRef(InternalAvatar)>
        }
        loading={false}
        shape="circle"
        type="primary"
      >
        RobertBaratheon
      </ForwardRef(InternalButton)>
    </Dropdown>,
    <ForwardRef(InternalButton)
      block={false}
      className="bg-transparent border-0"
      ghost={false}
      htmlType="button"
      icon={<ForwardRef(GlobalOutlined) />}
      loading={false}
      shape="circle"
      type="primary"
    />,
  ],
  "className": "txt-white align-items-center justify-content-end px-1",
}
`;
